# tree-sitter-helix

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file  go.mod  grammar.js  lol.helix  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.helix  tree-sitter.json
bindings/c/: tree-sitter-helix.h  tree-sitter-helix.pc.in  tree-sitter-multicursor.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree-sitter-multicursor/: __init__.py
bindings/python/tree_sitter_helix/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHelixTests/: TreeSitterHelixTests.swift
bindings/swift/TreeSitterMulticursor/: multicursor.h
src/: grammar.json  node-types.json  parser.c
test/corpus/: non_primary.txt  primary.txt  simple.txt
