[package]
name = "tree-sitter-helix"
description = "A parser for the extremely simple Helix language"
version = "0.1.0"
authors = ["Nikita Revenco <pm@nikrev.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "helix"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nik-rev/tree-sitter-helix"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
